--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-title: 卓的博客
-SEOTitle: 卓的博客
+title: 你来出境游
+SEOTitle: 你来出境游
 header-img: img/home-bg.jpg
-email: jinzhuo@outlook.com
+email: jinzhuo@nilai.com
 description: ""
 keyword: ""
-url: "http://jinzhuo.me"              # your host, for absolute URL
+url: "http://page.nilai.com"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
 
 
